--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 sudo: required
 
-services:
-  - docker
+language: c
 
 before_install:
-  - docker pull ubuntu
+  - git clone https://github.com/wallento/newlib-travis.git
 
-script:
-  - docker run ubuntu /bin/sh -c "cd /root/; apt-get install -y wget; wget https://raw.githubusercontent.com/wallento/newlib-travis/master/build.sh; bash -e build.sh"
