--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
-sudo: required
+sudo: false
 
-language: c
+addons:
+  apt:
+    packages:
+    - build-essential
+    - libgmp-dev
+    - libmpfr-dev
+    - libmpc-dev
+    - zlib1g-dev
+    - texinfo
+    - flex
+    - bison
 
 before_install:
   - git clone https://github.com/wallento/newlib-travis.git
-  - ./newlib-travis/setup.sh
 
 script:
   - ./newlib-travis/build.sh
